apps/productivity/paperless-ngx/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless-ngx
  namespace: paperless-ngx
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`paperless.internal.crussell.io`)
      kind: Rule
      services:
        - name: paperless-ngx
          port: 8000
